# bazel_depbot

./: .gitignore  BUILD  MODULE.bazel
.github/: dependabot.yml
